# Data-Science-Projects

./: .gitignore  LICENSE  README.md  pyproject.toml  tree_output.txt
Computer Vision with CCTV/: Proposed Solution.ipynb  Readme.md  create_hf_dataset.ps1  create_hf_dataset_script.py  pyproject.toml  requirements.txt  setup-venv-kernel.ps1  update-reqs.ps1  upload_mp4_to_raw.ps1  upload_mp4_to_raw_script.py
Computer Vision with Tiny-VIRAT/: Proposed Solution.ipynb  Readme.md  Tiny-VIRAT_metadata.csv  cleaned_Tiny-VIRAT_metadata.csv  frame_extraction_log.txt  pyproject.toml  upload_mp4_to_raw.ps1
Computer Vision/Alarm Management/: Readme.md
References/: Data Science Methodology - Slide.pptx  Show-Tree.ps1
Supply Chains Domain Knowledge/: Readme.md
Supply Chains Domain Knowledge/Coursera Course - GenAI for Supply Chain Optimization/: Readme.md
Supply Chains Domain Knowledge/Coursera Professional Certificate - Unilever Supply Chain Data Analyst/: Readme.md
Supply Chains Domain Knowledge/Coursera Specialization - Leverage Data Science for a More Agile Supply Chain/: C1M1-Forecast Activity.xlsx  Course 1 - Supply Chain Planning.md  Course1-Supply-Chain-Planning.ipynb  Practical notes with numeric data.ipynb  Readme.md  Theory with my notes.md
Supply Chains Domain Knowledge/Coursera Specialization - Machine Learning for Supply Chains/: C2_M4_data.csv  Readme.md  Specialization Notebook.ipynb
Supply Chains Domain Knowledge/Coursera Specialization - Machine Learning or Supply Chains/: Readme.md
