[tool.poetry]
name = "data-science-projects"
version = "0.1.0"
description = ""
authors = ["Laith-Rasheed <laithrasheed747@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
