[tool.poetry]
name = "data-science-projects"
version = "0.1.0"
description = ""
authors = ["Laith-Rasheed <laithrasheed747@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
matplotlib = "^3.10.3"
scipy = "^1.15.3"
seaborn = "^0.13.2"
pulp = "^3.2.1"
statsmodels = "^0.14.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
